# tower-cli

./: README.md  pyproject.toml
docs/: generate_screenshots.py
tower/: cli.py  config.py  evaluator.py  interactive.py
